# GameEngine

./: CMakeLists.txt  README.md
cmake/: lcov.cmake
img/: Renderer_pipeline.pptx
src/: CMakeLists.txt  main.c
src/Base/: CMakeLists.txt  Coordinates.h  common.h  coordinates.c  math_functions.c  math_functions.h
src/Base/tests/: CMakeLists.txt  common_tests.c  coordinates_tests.c  math_functions_tests.c
src/Engine/: CMakeLists.txt  camera.c  camera.h  coordinate_system_transformations.c  coordinate_system_transformations.h  frame_synchronizer.c  frame_synchronizer.h  illumination.c  illumination.h  object.h  renderer.c  renderer.h
src/Engine/include/Engine/: camera.h  object.h  renderer.h
src/Engine/tests/: CMakeLists.txt  camera_tests.c  coordinate_system_transformations_tests.c  illumination_tests.c
src/Game/: CMakeLists.txt  game.c  game.h
src/Game/Objects/: CMakeLists.txt  sphere.c  sphere.h  torus.c  torus.h
src/Game/Objects/tests/: CMakeLists.txt  sphere_tests.c  torus_tests.c
src/Game/include/Game/: game.h
src/Game/profile/: CMakeLists.txt  game_profiler.c
src/Game/tests/: CMakeLists.txt  game_tests.c
src/LinearAlgebra/: CMakeLists.txt  matrix.c  matrix.h  vector.c  vector.h
src/LinearAlgebra/include/LinearAlgebra/: matrix.h
src/LinearAlgebra/tests/: CMakeLists.txt  matrix_tests.c  vector_tests.c
src/TestFramework/: CMakeLists.txt  test_framework.c  test_framework.h
src/TestFramework/include/TestFramework/: test_framework.h
